--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -142,6 +142,7 @@ ul {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  
 }
 
